@@ -797,10 +797,10 @@ function RefreshFavorites()
 								var status="";
 								if (typeof item.Counter != 'undefined') {
 									if (data.DashboardType==0) {
-										status+=item.Counter + ', Today: ' + item.CounterToday;
+										status+='Today: ' + item.CounterToday;
 									}
 									else {
-										status+='U: '+item.Counter + ', T: ' + item.CounterToday;
+										status+='U: T: ' + item.CounterToday;
 									}
 								}
 								else if ((item.Type == "Current") || (item.Type == "Current/Energy")) {
@@ -830,11 +830,11 @@ function RefreshFavorites()
 								if (typeof item.CounterDeliv != 'undefined') {
 									if (item.CounterDeliv!=0) {
 										if (data.DashboardType==0) {
-											status+='<br>Return: ' + item.CounterDeliv + ', Today: ' + item.CounterDelivToday;
+											status+='<br>Return: Today: ' + item.CounterDelivToday;
 											status+=", Actual: " + item.UsageDeliv;
 										}
 										else {
-											status+='<br>R: ' + item.CounterDeliv + ', T: ' + item.CounterDelivToday;
+											status+='<br>R: T: ' + item.CounterDelivToday;
 											status+=", A: " + item.UsageDeliv;
 										}
 									}
@@ -851,10 +851,10 @@ function RefreshFavorites()
 								if (typeof item.Counter != 'undefined') {
 									img='<img src="images/counter.png" height="40">';
 									if (data.DashboardType==0) {
-										status=item.Counter + ', Today: ' + item.CounterToday;
+										status='Today: ' + item.CounterToday;
 									}
 									else {
-										status='U: '+item.Counter + ', T: ' + item.CounterToday;
+										status='U: T: ' + item.CounterToday;
 									}
 								}
 								else if ((item.Type == "Current") || (item.Type == "Current/Energy")) {
@@ -911,11 +911,11 @@ function RefreshFavorites()
 										}
 										status+='<br>';
 										if (data.DashboardType==0) {
-											status+='Return: ' + item.CounterDeliv + ', Today: ' + item.CounterDelivToday;
+											status+='Return: Today: ' + item.CounterDelivToday;
 											status+=", Actual: " + item.UsageDeliv;
 										}
 										else {
-											status+='R: ' + item.CounterDeliv + ', T: ' + item.CounterDelivToday;
+											status+='R: T: ' + item.CounterDelivToday;
 											status+=", A: " + item.UsageDeliv;
 										}
 									}
@@ -2082,10 +2082,10 @@ function ShowFavorites()
 							var status="";
 							if (typeof item.Counter != 'undefined') {
 								if (data.DashboardType==0) {
-									status=item.Counter + ', Today: ' + item.CounterToday;
+									status='Today: ' + item.CounterToday;
 								}
 								else {
-									status='U: '+item.Counter + ', T: ' + item.CounterToday;
+									status='U: T: ' + item.CounterToday;
 								}
 							}
 							else if ((item.Type == "Current") || (item.Type == "Current/Energy")){
@@ -2116,11 +2116,11 @@ function ShowFavorites()
 								if (item.CounterDeliv!=0) {
 									status+='<br>R: ';
 									if (data.DashboardType==0) {
-										status+=item.CounterDeliv + ', Today: ' + item.CounterDelivToday;
+										status+='Today: ' + item.CounterDelivToday;
 										status+=", Actual: " + item.UsageDeliv;
 									}
 									else {
-										status+=item.CounterDeliv + ', T: ' + item.CounterDelivToday;
+										status+='T: ' + item.CounterDelivToday;
 										status+=", A: " + item.UsageDeliv;
 									}
 								}
@@ -2175,10 +2175,10 @@ function ShowFavorites()
 							if (typeof item.Counter != 'undefined') {
 								xhtm+='counter.png" height="40"></td>\n';
 								if (data.DashboardType==0) {
-									status=item.Counter + ', Today: ' + item.CounterToday;
+									status='Today: ' + item.CounterToday;
 								}
 								else {
-									status='U: '+item.Counter + ', T: ' + item.CounterToday;
+									status='U: T: ' + item.CounterToday;
 								}
 							}
 							else if ((item.Type == "Current") || (item.Type == "Current/Energy")) {
@@ -2226,11 +2226,11 @@ function ShowFavorites()
 								if (item.CounterDeliv!=0) {
 									status+='<br>';
 									if (data.DashboardType==0) {
-										status+='Return: ' + item.CounterDeliv + ', Today: ' + item.CounterDelivToday;
+										status+='Return: Today: ' + item.CounterDelivToday;
 										status+=", Actual: " + item.UsageDeliv;
 									}
 									else {
-										status+='R: ' + item.CounterDeliv + ', T: ' + item.CounterDelivToday;
+										status+='R: T: ' + item.CounterDelivToday;
 										status+=", A: " + item.UsageDeliv;
 									}
 								}
